# EuroscopePluginCMakeTemplate

./: CMakeLists.txt  Plugin.cpp  Plugin.h  library.cpp  library.h
lib/include/: EuroScopePlugIn.h
